test case cahnges and caoverage added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/Weather.test.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/Weather.test.tsx", "jest.setup.js", "jest.config.js"],
   "exclude": ["node_modules"]
 }
